<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item
        android:id="@+id/add_to_youtuber_group"
        android:title="@string/add_to_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/remove_from_current_youtuber_group"
        android:title="@string/remove_from_current_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/edit_youtuber_info"
        android:title="@string/edit_youtuber_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/hide_youtubers"
        android:title="@string/hide_selected"
        app:showAsAction="never" />

    <item
        android:id="@+id/unhide_youtubers"
        android:title="@string/unhide_selected"
        app:showAsAction="never" />

</menu>
