<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/edit_thumb_preview"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:contentDescription="@string/thumbnail"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/edit_select_thumb_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_custom_thumbnail" />

        <Button
            android:id="@+id/edit_capture_thumb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capture_thumbnail" />

        <Button
            android:id="@+id/edit_remove_thumb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_custom_thumbnail" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author">

            <MultiAutoCompleteTextView
                android:id="@+id/edit_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/artist">

            <MultiAutoCompleteTextView
                android:id="@+id/edit_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/video_source_url_optional">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/video_duration">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/edit_fetch_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_in_app" />

        <Button
            android:id="@+id/edit_fetch_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fetch_from_link" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/keywords">

            <MultiAutoCompleteTextView
                android:id="@+id/edit_keywords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
