<?xml version="1.0" encoding="utf-8"?>
<FrameLayout style="@style/Widget.Material3.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/sort_by"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/date"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:drawablePadding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/date_added"
            app:drawableStartCompat="@drawable/ic_arrow_up" />

        <TextView
            android:id="@+id/media_published_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="30dp"
            android:focusable="true"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/upload_release_date"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/ic_arrow_up" />


        <TextView
            android:id="@+id/title"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:drawablePadding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/title"
            app:drawableStartCompat="@drawable/ic_arrow_up" />


        <TextView
            android:id="@+id/duration"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="30dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/length"
            app:drawableStartCompat="@drawable/ic_arrow_up" />

        <LinearLayout
            android:id="@+id/source_date_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingBottom="12dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/source_date_unavailable"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/source_date_policy_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/source_date_use_download_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/source_date_use_download_date" />

                <RadioButton
                    android:id="@+id/source_date_group_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/source_date_group_first" />

                <RadioButton
                    android:id="@+id/source_date_group_last"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/source_date_group_last" />
            </RadioGroup>

        </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>
