<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/Widget.Material3.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/format_filter_linear"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/status"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/missing_thumbnail"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:drawablePadding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/missing_thumbnail"
            app:drawableStartCompat="@drawable/empty" />

        <TextView
            android:id="@+id/custom_thumbnail_only"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:drawablePadding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/custom_thumbnail_only"
            app:drawableStartCompat="@drawable/empty" />

        <TextView
            android:id="@+id/hardsub_done_only"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:drawablePadding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/hardsub_done_only"
            app:drawableStartCompat="@drawable/empty" />

        <TextView
            android:id="@+id/hardsub_scan_target_only"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:drawablePadding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/hardsub_scan_target_only"
            app:drawableStartCompat="@drawable/empty" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/typeFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/media_type"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/typeChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            app:chipSpacing="0dp"
            app:chipSpacingVertical="-10dp"
            app:selectionRequired="true"
            app:singleLine="false"
            app:singleSelection="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/displayFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/display"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/includeChildCategoryVideosCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/include_child_category_videos" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/showHiddenOnlyCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/show_hidden_only" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/websiteFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/websites"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/websitesChipGroup"
            android:layout_width="wrap_content"
            app:chipSpacingVertical="-10dp"
            app:chipSpacing="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            app:selectionRequired="true"
            app:singleSelection="false"
            android:layout_height="wrap_content"
            app:singleLine="false">

        </com.google.android.material.chip.ChipGroup>


    </LinearLayout>


</LinearLayout>
