<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="8dp">

    <TextView
        android:id="@+id/local_match_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="Title" />

    <TextView
        android:id="@+id/local_match_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:text="Local info" />

    <TextView
        android:id="@+id/local_match_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:text="Match" />

    <RadioGroup
        android:id="@+id/local_match_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/local_match_unset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_match_unset" />

        <RadioButton
            android:id="@+id/local_match_keep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_match_keep" />
    </RadioGroup>

    <Button
        android:id="@+id/local_match_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local_match_edit" />

</LinearLayout>
